# emboss

./: .gitignore  BUILD  MODULE.bazel
compiler/back_end/cpp/: BUILD  build_defs.bzl  generated_code_templates  header_generator.py  one_golden_test.py  run_one_golden_test.py
compiler/back_end/cpp/testcode/: parameters_test.cc
compiler/front_end/: attribute_checker.py  attribute_checker_test.py  attributes.py  constraints.py  constraints_test.py  expression_bounds.py  format_emb.py  module_ir.py  module_ir_test.py  tokenizer.py  tokenizer_test.py  type_check.py
compiler/util/: ir_data.py  ir_util.py
doc/: grammar.md  language-reference.md
runtime/cpp/: emboss_arithmetic.h  emboss_array_view.h  emboss_cpp_util.h  emboss_crc.h  emboss_memory_util.h
runtime/cpp/test/: BUILD  emboss_array_view_test.cc  emboss_crc_test.cc
scripts/: black_check.sh  black_common.sh  black_fix.sh
testdata/: bit_numbering.emb  crc.emb
testdata/format/: arithmetic_expressions.emb  arithmetic_expressions.emb.formatted  arithmetic_expressions.emb.formatted_indent_4  functions.emb.formatted  functions.emb.formatted_indent_4
testdata/golden_cpp/: parameters.emb.h
